Changes in the latest paper.

--- a/paper/eacl/eacl2017.bib
+++ b/paper/eacl/eacl2017.bib
@@ -14,7 +14,21 @@ doi="10.1007/978-3-642-17528-2_5",
 url="http://dx.doi.org/10.1007/978-3-642-17528-2_5"
 }
 
-Pawan Goyal and Gérard Huet. Completeness Analysis of a Sanskrit Reader. Proceedings of the Fifth International Symposium on Sanskrit Computational Linguistics, Mumbai, January 2013. Available electronically as pdf. Final version in "Recent Researches in Sanskrit Computational Linguistics", Ed. Malhar Kulkarni and Chaitali Dangarikar, D.K. Printworld, 2013.
+@inproceedings{bharati2007,
+	title={Sanskrit and computational linguistics},
+	author={Bharati, Akshar and Kulkarni, Amba},
+	booktitle={First International Sanskrit Computational Symposium. Department of Sanskrit Studies, University of Hyderabad},
+	year={2007}
+}
+
+
+@inproceedings{goyal2013,
+	title={Completeness analysis of a Sanskrit reader},
+	author={Goyal, Pawan and Huet, G{\'e}rard},
+	booktitle={Proceedings, 5th International Symposium on Sanskrit Computational Linguistics. DK Printworld (P) Ltd},
+	pages={130--171},
+	year={2013}
+}
 
 
 @book{Aho:72,
