--- a/paper/eacl/eacl2017.tex
+++ b/paper/eacl/eacl2017.tex
@@ -61,7 +61,7 @@ The basic constituents of a language are its characters which are joined togethe
 	\item \textbf{Probabilistic based model:} When a deterministic grammar is not available, a probabilistic language model can be learnt using a large corpus of data.
 \end{itemize}
 
-Sanskrit is one of the oldest languages designed by mankind having its origin in the Indo-Aryan civilization from 200B.C. Sanskrit has a rich tradition of poetry and literature works written, making it an important linguistic study. Being one of the oldest language, word formation in Sanskrit can be defined by set of deterministic rules and follows a defined structure. \textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}} (meaning a collection of eight books) by \textit{P\={a}\d{n}ini} is the source of Sanskrit's grammar, syntax, and semantics. The importance of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is three fold. The first one, as is well known, as an almost exhaustive grammar for any natural language with meticulous details yet small enough to memorize. Though \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is written to describe the then prevalent Sanskrit language, it provides a grammatical framework which is general enough to analyse other languages as well. This makes the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from the point of view of concepts it uses for language analysis important. The third aspect of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is its organization. The set of less than 4000 \textit{s\={u}tra} is similar to any computer program with one major difference the program being written for a human being and not for a machine thereby allowing some non-formal or semi-formal \textit{s\={u}tra} which require a human being to interpret and implement them. Nevertheless, we believe that the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from programming point of view may lead to a new programming paradigm because of its rich structure. In this way, 	\textit{P\={a}\d{n}ini's} created a brief and immensely dense work. 
+Sanskrit is one of the oldest languages designed by mankind having its origin in the Indo-Aryan civilization from 200B.C. Sanskrit has a rich tradition of poetry and literature works written, making it an important linguistic study. Being one of the oldest language, word formation in Sanskrit can be defined by set of deterministic rules and follows a defined structure. \textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}} (meaning a collection of eight books) by \textit{P\={a}\d{n}ini} is the source of Sanskrit's grammar, syntax, and semantics. The importance of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is three fold\cite{bharati2007}. The first one, as is well known, as an almost exhaustive grammar for any natural language with meticulous details yet small enough to memorize. Though \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is written to describe the then prevalent Sanskrit language, it provides a grammatical framework which is general enough to analyse other languages as well. This makes the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from the point of view of concepts it uses for language analysis important. The third aspect of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} is its organization. The set of less than 4000 \textit{s\={u}tra} is similar to any computer program with one major difference the program being written for a human being and not for a machine thereby allowing some non-formal or semi-formal \textit{s\={u}tra} which require a human being to interpret and implement them. Nevertheless, we believe that the study of \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} from programming point of view may lead to a new programming paradigm because of its rich structure. In this way, 	\textit{P\={a}\d{n}ini's} created a brief and immensely dense work. 
 
 With a rich deterministic grammar supporting the Sanskrit language, the formation of each word also happens in a structured manner governed by set of rules called Sandhi. Morphemes are the basic unbreakable morphological units that forms the fundamental building blocks for words. The process of merging two or more morphemes to form a word in Sanskrit is called as Sandhi merging. On the other hand, the process of breaking a word into its constituent morphemes is called Sandhi splitting. This process is akin to most of the other languages, such as in English, \textit{``come"} + \textit{``-ing"} $\rightarrow$ \textit{``coming"}, where we lose the additional ``\textit{e}" in the word \textit{``come"} while merging. Another such example include words such as ``indirect", ``impossible", and ``illuminate", where all these words have the same prefix as ``in-", however, that got modified when merging with the root word. Learning this process could provide fundamental insights into the linguistic cognition of forming words and sentences of a language. Further, learning an automated algorithm that could perform Sandhi splitting and merging in Sanskrit would also provide a framework for learning word organization in languages.
 
@@ -70,7 +70,7 @@ Based on the occurrence of Sandhi, they are broadly classified into two types:
 \begin{enumerate}
 	\item \textbf{Internal Sandhi:} Sanskrit grammar has three granular meaningful units (morphemes) – prefixes, roots, and suffixes, where every word in Sanskrit can be derived from these units. When these units combine to form a word, certain changes take place and this is known as internal Sandhi.
 	
-	For example, \textit{ bho} (changed form of verb \textit{bh\={u}} bhuu (‘’to be’’)) + \textit{anam} (anam, a noun forming suffix) $\rightarrow$ \textit{bhavanam }(bhavanam, “being”) is a case of internal Sandhi.
+	For example, \textit{ bho} (changed form of verb \textit{bh\={u}} (‘’to be’’)) + \textit{anam} (a noun forming suffix) $\rightarrow$ \textit{bhavanam }( ``being'') is a case of internal Sandhi.
 	
 	\item \textbf{External Sandhi:}
 	On the other hand, when Sandhi takes place between two words or a compound word, it is known as external sandhi. 
@@ -85,7 +85,7 @@ Sandhi can be further classified depending on the type of the last letter and th
 \begin{enumerate}
 	\item \textbf{Vowel Sandhi:} Both letters are vowels e.g. \textit{ hima} (``snow'') + \textit{ \={a}laya\d{h}} (``house'') $\rightarrow$ \textit{him\={a}laya\d{h}} (``house of snow'')
 	\item \textbf{Consonant Sandhi :}  At least one of the two letters is a consonant, e.g. \textit{v\d{r}k\d{s}a} (``tree'') + \textit{ch\={a}y\={a} }(``shade'') $\rightarrow$ \textit{v\d{r}k\d{s}acch\={a}y\={a}} (``shade of tree'') 
-	\item \textbf{Visarga Sandhi :} A visarga combines with a vowel or a consonant, e.g.  \textit{ puna\d{h} }(``again'') + \textit{janma }(``birth'') $\rightarrow$ \textit{punarjanma} (punarjanma, “rebirth”)
+	\item \textbf{Visarga Sandhi :} A visarga combines with a vowel or a consonant, e.g.  \textit{ puna\d{h} }(``again'') + \textit{janma }(``birth'') $\rightarrow$ \textit{punarjanma} (``rebirth'')
 	
 \end{enumerate}
 
@@ -321,30 +321,31 @@ Thus, a new corpus was manually created. This was done for half of Gita, i.e. fo
 
 Results of Automated Evaluation Chapter wise, here A refers to \textit{adhy\={a}ya} in Sanskrit:
 
-\begin{table}[h]
+\begin{table}[t]
 \begin{center}
-\begin{tabular}{p{1.4cm} | p{1.6cm} | p{1.5cm} | p{1.5cm}}
+\begin{tabular}{|p{1.2cm} | p{1cm}|p{1cm} | p{1.2cm} | p{1.2cm}|}
 \hline 
- & \bf JNU & \bf UoH & \bf INRIA \\ 
+ \bf Chapter & \bf Words & \bf JNU & \bf UoH & \bf INRIA \\ 
  \hline
  
-\bf $A_1$ [157] &   2 (1.27 \%) &   76 (48.41 \%) &   114 (72.61 \%) \\
-\bf $A_2$ [270] &   10 (3.70 \%) &   132 (48.89 \%) &   188 (69.63 \%) \\
-\bf $A_3$ [169] &   11 (6.51 \%) &   83 (49.11 \%) &   110 (65.09 \%) \\
-\bf $A_4$ [165] &   9 (5.45 \%) &   86 (52.12 \%) &   108 (65.45 \%) \\
-\bf $A_5$ [113] &   4 (3.54 \%) &   52 (46.02 \%) &   76 (67.26 \%) \\
-\bf $A_6$ [187] &   13 (6.95 \%) &   80 (42.78 \%) &   122 (65.24 \%) \\
-\bf $A_7$ [120] &   6 (5.00 \%) &   43 (35.83 \%) &   84 (70.00 \%) \\
-\bf $A_8$ [116] &   6 (5.17 \%) &   54 (46.55 \%) &   79 (68.10 \%) \\
-\bf $A_9$ [135] &   1 (0.74 \%) &   44 (32.59 \%) &   91 (67.41 \%) \\
-\bf Total [1432] &   62 (4.33 \%) &   650 (45.39 \%) &   972 (67.88 \%) \\
- 
-\hline
+\bf	1	&	157	&	2	(1.3\%)	&	76	(48.4\%)	&	114	(72.6\%)	\\	\hline
+\bf	2	&	270	&	10	(3.7\%)	&	132	(48.9\%)	&	188	(69.6\%)	\\	\hline
+\bf	3	&	169	&	11	(6.5\%)	&	83	(49.1\%)	&	110	(65.1\%)	\\	\hline
+\bf	4	&	165	&	9	(5.5\%)	&	86	(52.1\%)	&	108	(65.5\%)	\\	\hline
+\bf	5	&	113	&	4	(3.5\%)	&	52	(46.0\%)	&	76	(67.3\%)	\\	\hline
+\bf	6	&	187	&	13	(7.0\%)	&	80	(42.8\%)	&	122	(65.2\%)	\\	\hline
+\bf	7	&	120	&	6	(5.0\%)	&	43	(35.8\%)	&	84	(70.0\%)	\\	\hline
+\bf	8	&	116	&	6	(5.2\%)	&	54	(46.6\%)	&	79	(68.1\%)	\\	\hline
+\bf	9	&	135	&	1	(0.7\%)	&	44	(32.6\%)	&	91	(67.4\%)	\\	\hline
+\bf	Total	&	1432	&	62	(4.3\%)	&	650	(45.4\%)	&	972	(67.9\%)	\\	\hline
+
 \end{tabular}
 \end{center}
 \caption{\label{font-table} Evaluation Results }
 \end{table}
 
+
+From the results it can be observed that INRIA was giving in average around 70\% of accuraccy for each of the chapters making the overall accuraccy to 70\%. UoH performed betterfor 4th chapter and performed poorly for chapter 9. The average preformance for UoH is around 45\%. JNU performed equally for all the chapters and the performance of JNU is just 4.3\%. 
 
 \begin{figure}[h]
 	\center
@@ -374,6 +375,10 @@ INRIA & 13416 (73.20 \%)\\
 \end{table}
 
 
+For UoH corpus JNU performed better than \textit{Bhagavad-g\={\i}t\={a}} Corpus. performance of JNU splitter for \textit{Bhagavad-g\={\i}t\={a}} Corpus was around 4.3\% where as for UoH corpus the performance is 17.5\%. This must be result of the filtering process of data sets. As we checked for dictionary for splitted words which makes the words in right side small and simpler which boosted JNU's accuraccy. Similarly there is a significant difference for UoH result as well. There is an overall increase of 17\%.
+
+INRIA there is no significant difference between \textit{Bhagavad-g\={\i}t\={a}} Corpus and UoH corpus the difference is around 5\%.
+
 \subsubsection{Word-length filtered \textit{\={a}staadhyaayi} corpus}
     
 Results on \textit{\={a}staadhyaayi}
@@ -382,135 +387,28 @@ Sutras where Sandhi Split Applicable –2,700
     
 
 
-\begin{table}[h]
+\begin{table}[t]
 \begin{center}
-\begin{tabular}{ p{2cm}  r r r r }
+\begin{tabular}{ |p{1.5cm}|  p{1.1cm}| p{0.8cm}| p{1.1cm}| p{1.1cm}| }
 \hline  
-\bf No. of letters ($\le$) & Samples & JNU & UoH & INRIA\\
+\bf \# Letters ($\le$) & \bf Sandhis & \bf JNU & \bf UoH & \bf INRIA\\
 \hline
-\bf	10	&	93	&	4(4.3)	&	21(22.6)	&	21	\\
-\bf	20	&	571	&	10(1.75)	&	100(17.5)	&	100	\\
-\bf	30	&	1512	&	17(1.12)	&	226(14.9)	&	226	\\
-\bf	40	&	2045	&	18(0.88)	&	263(12.86)	&	263	\\
-\bf	50	&	2302	&	18(0.78)	&	263(11.42)	&	263	\\
-\bf	All	&	2700	&	18(0.66)	&	263(9.74)	&	263	\\
-\hline
+\bf	10	&	93	&	4 (4.3\%)	&	21 (22.6\%)	&	29 (31.2\%)	\\	\hline
+\bf	20	&	571	&	1 (1.8\%)	&	100 (17.5\%)	&	195 (34.2\%)	\\	\hline
+\bf	30	&	1512	&	17 (1.1\%)	&	226 (14.9\%)	&	378 (25.0\%)	\\	\hline
+\bf	40	&	2045	&	18 (0.9\%)	&	263 (12.9\%)	&	444 (21.7\%)	\\	\hline
+\bf	50	&	2302	&	18 (0.8\%)	&	263 (11.4\%)	&	460 (20.0\%)	\\	\hline
+\bf	All	&	2700	&	18 (0.7\%)	&	263 (9.7\%)	&	507 (18.8\%)	\\	\hline
 \end{tabular}
 \end{center}
 \caption{\label{font-table} Evaluation Results }
 \end{table}
 
-
-\subsection{Evaluation of Sandhi Merging tools}
-
-Implementation of Sandhi merging tool is simpler when compared to implementing sandhi splitting and parsing tool. The advantage in sandhi merging is most of the rules consider only the last letter of the current word and the first letter of its adjacent word. So it is clear to use which rule. All the Sandhi Merging tools allow only two words to be merged. So in our automated tool we took first two pairs for merging and we took the resulting compound word for the next input along with its adjacent word. 
-
-INRIA sandhi merging tool has an option to choose between internal and external sandhi So for our analysis we tried both internal and external sandhis and merged the result, and gave positive merge if either of one tool merges it correctly. Other two tools has no distinguish between internal and external sandhis.
-
-For sandhi merging we did only automated evaluation, and the results were presented in the following subsections.
+From the results its evident that when the size of letters were restricted to 10 all the three splitters performed their best. At letters size 20 performance of INRIA increased by a small percentage but the performance of other splitters started dipping. From letters size 20 onwords for all the splitters the performance started decreased. From the results two things can be inferred the first one is there must be some issue with the dataset for example most of the words were not splitted completely etc. or the second inferrence can be the splitters themselves are not capable of handling complex and long size words.
 
 
-\subsubsection{Rule based corpus}
-\begin{table}[h]
-	\begin{center}
-		\begin{tabular}{|l|l|}
-			\hline \bf Splitting tool & Automated \\ \hline
-			JNU&20.92\% \\
-			UoH&32.97\% \\
-			INRIA&51.77\% \\
-			\hline
-		\end{tabular}
-	\end{center}
-	\caption{\label{font-table} Evaluation Results }
-\end{table}
-
-
-\subsubsection{Benchmark dataset}
-
-\begin{table}[h]
-	\begin{center}
-		\begin{tabular}{|p {1cm}  | p{2.5cm} |}
-			\hline \bf  Merger & \bf Automated Evaluation Results(150) \\
-			\hline
-			JNU &  $75 (50\%)$\\
-			UoH &  $129 (86\%)$\\
-			INRIA & $131 (87.33\%)$\\
-			\hline
-		\end{tabular}
-	\end{center}
-	\caption{\label{font-table} Evaluation Results }
-\end{table}
-
-\subsubsection{\textit{Bhagavad-g\={\i}t\={a}} Corpus}
-\begin{table}[h]
-	\begin{center}
-		\begin{tabular}{p{1.4cm} | p{1.6cm} | p{1.5cm} | p{1.5cm}}
-			\hline 
-			& \bf JNU & \bf UoH & \bf INRIA \\
-			\hline
-			
-			
-			\bf $A_1$ [157] &   47 (29.94 \%) &   90 (57.32 \%) &   87 (55.41 \%) \\
-			\bf $A_2$ [270] &   71 (26.30 \%) &   181 (67.04 \%) &   174 (64.44 \%) \\
-			\bf $A_3$ [169] &   52 (30.77 \%) &   126 (74.56 \%) &   111 (65.68 \%) \\
-			\bf $A_4$ [165] &   47 (28.48 \%) &   121 (73.33 \%) &   105 (63.64 \%) \\
-			\bf $A_5$ [113] &   29 (25.66 \%) &   77 (68.14 \%) &   64 (56.64 \%) \\
-			\bf $A_6$ [187] &   47 (25.13 \%) &   114 (60.96 \%) &   100 (53.48 \%) \\
-			\bf $A_7$ [120] &   29 (24.17 \%) &   64 (53.33 \%) &   53 (44.17 \%) \\
-			\bf $A_8$ [116] &   30 (25.86 \%) &   67 (57.76 \%) &   63 (54.31 \%) \\
-			\bf $A_9$ [135] &   27 (20.00 \%) &   65 (48.15 \%) &   55 (40.74 \%) \\
-			\bf Total [1432] &   379 (26.47 \%) &   905 (63.20 \%) &   812 (56.70 \%) \\
-			\hline
-		\end{tabular}
-	\end{center}
-	\caption{\label{font-table} Evaluation Results }
-\end{table}
-
-\begin{figure}[h]
-	\center
-	\includegraphics[scale=0.34]{images/merge.png}
-	\caption{\label{screen}Screenshot of the built QA system showing the orchestration flow for the question - ``problem with transfer order"}
-\end{figure}
-
-\subsubsection{UoH Corpus}
-
-\begin{table}[h]
-	\begin{center}
-		\begin{tabular}{| r | r | }
-			\hline  \bf Merger & \bf No. of Cases Correctly Identified \\
-			\hline
-			JNU & 6517 (35.56 \%) \\
-			UoH & 12895 (70.36.2 \%) \\
-			INRIA & 12611 (68.81 \%)\\
-			\hline
-		\end{tabular}
-	\end{center}
-	\caption{\label{font-table} Evaluation Results }
-\end{table}
-
-
-\subsubsection{\textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}} Corpus}
-
-\begin{table}[h]
-	\begin{center}
-		\begin{tabular}{ p{2cm}  r r r r }
-			\hline  
-			\bf No. of letters ($\le$) & Samples & JNU & UoH & INRIA\\
-			\hline
-			\bf	10	&	93	&	26	&	58	&	51	\\
-			\bf	20	&	571	&	120	&	343	&	269	\\
-			\bf	30	&	1512	&	250	&	763	&	634	\\
-			\bf	40	&	2045	&	315	&	988	&	803	\\
-			\bf	50	&	2302	&	355	&	1096	&	890	\\
-			\bf	All	&	2700	&	411	&	1260	&	1016	\\
-			\hline
-		\end{tabular}
-	\end{center}
-	\caption{\label{font-table} Evaluation Results }
-\end{table}
-
-\section{Sandhitype based analysis}
-
+\subsection{Sandhitype based analysis}
+As JNU sandhi merger tool implemented only vowel sandhi rules we splitted all our corpora into the three types of sandhis and carried out the experiments, the results were shown in the following three graphs. As their claim JNU performed better for vowel sandhi cases in other two type of sandhi cases JNU performed poorly.  UoH out performed in vowel sandhi cases where as INRIA performed better in the other two sandhi types.
 \begin{figure}[h]
 	\center
 	\includegraphics[scale=0.34]{images/visarga.png}
@@ -529,6 +427,124 @@ For sandhi merging we did only automated evaluation, and the results were presen
 	\caption{\label{screen}vowel}
 \end{figure}
 
+\subsection{Evaluation of Sandhi Merging tools}
+
+Implementation of Sandhi merging tool is simpler when compared to implementing sandhi splitting and parsing tool. The advantage in sandhi merging is most of the rules consider only the last letter of the current word and the first letter of its adjacent word. So it is clear to use which rule. All the Sandhi Merging tools allow only two words to be merged. So in our automated tool we took first two pairs for merging and we took the resulting compound word for the next input along with its adjacent word. 
+
+INRIA sandhi merging tool has an option to choose between internal and external sandhi So for our analysis we tried both internal and external sandhis and merged the result, and gave positive merge if either of one tool merges it correctly. Other two tools has no distinguish between internal and external sandhis.
+
+For sandhi merging we did only automated evaluation, and the results were presented in the following subsections.
+
+
+\subsubsection{Example corpus}
+We evaluated our example rule based corpus to see how many rules were implemented in each of the merging tool.
+\begin{table}[h]
+	\begin{center}
+		\begin{tabular}{|l|l|}
+			\hline \bf Merging tool & \bf Results (282) \\ \hline
+			JNU&20.92\% \\ \hline
+			UoH&32.97\% \\ \hline
+			INRIA&51.77\% \\ \hline
+%			\hline
+		\end{tabular}
+	\end{center}
+	\caption{\label{font-table} Evaluation Results }
+\end{table}
+
+From the table it is clear that most of the rules were implemented in INRIA which is 51\%.  This implies that half of the rules were not implemented by any of the tools. In UoH almost 33\% of the rules were implemented where as in JNU only 21\% of the total rules were implemented.
+\subsubsection{Benchmark dataset}
+
+We than ran on the benchmark dataset to see the sample output. Results were shown in the following table
+
+\begin{table}[h]
+	\begin{center}
+		\begin{tabular}{|l  | l |}
+			\hline \bf  Merger & \bf Results (150) \\
+			\hline
+			JNU &  $75 (50\%)$\\ \hline
+			UoH &  $129 (86\%)$\\ \hline
+			INRIA & $131 (87.33\%)$\\ \hline
+		\end{tabular}
+	\end{center}
+	\caption{\label{font-table} Evaluation Results }
+\end{table}
+
+Though very few rules were implemented by UoH the performance of UoH is comparable with that of INRIA where almost 51\% of the rules were implemented. Both UoH and INRIA performed an overwhelming 86\% and 87\% respectively. Where as JNU performed poorly and the performance is only 50\%.
+
+\subsubsection{\textit{Bhagavad-g\={\i}t\={a}} Corpus}
+Merging results for the sandhied words of \textit{Bhagavad-g\={\i}t\={a}} first 9 chapters were shown in the following table.
+
+\begin{table}[h]
+	\begin{center}
+		\begin{tabular}{|p{1cm} | p{1cm}|p{1.2cm} | p{1.2cm} | p{1.2cm} |}
+			\hline 
+			\bf Chapter & \bf Words &\bf JNU & \bf UoH & \bf INRIA \\
+			\hline
+			
+		\bf	1	&	157	&	47 (29.9\%)	&	90 (57.3\%)	&	87 (55.4\%)	\\	\hline
+		\bf	2	&	270	&	71 (26.3\%)	&	181 (67.1\%)	&	174 (64.4\%)	\\	\hline
+		\bf	3	&	169	&	52 (30.8\%)	&	126 (74.6\%)	&	111	(65.7\%)	\\	\hline
+		\bf	4	&	165	&	47 (28.5\%)	&	121 (73.3\%)	&	105	(63.6\%)	\\	\hline
+		\bf	5	&	113	&	29 (25.7\%)	&	77 (68.1\%)	&	64	(56.6\%)	\\	\hline
+		\bf	6	&	187	&	47 (25.1\%)	&	114 (61.0\%)	&	100	(53.5\%)	\\	\hline
+		\bf	7	&	120	&	29 (24.2\%)	&	64	(53.3\%)	&	53	(44.2\%)	\\	\hline
+		\bf	8	&	116	&	30 (25.9\%)	&	67	(57.8\%)	&	63	(54.3\%)	\\	\hline
+		\bf	9	&	135	&	27 (20.0\%)	&	65	(48.2\%)	&	55	(40.7\%)	\\	\hline
+		\bf	Total	&	1432	&	379 (26.5\%)	&	905	(63.2\%)	&	812	(56.7\%)	\\	\hline
+		\end{tabular}
+	\end{center}
+	\caption{\label{font-table} Evaluation Results }
+\end{table}
+
+From the results it is clear that all the merging tools performed their best for the third chapter and performed badly for the ninth chapter.  UoH merging tool performed slightly better than the INRIA tool. Performance of UoH and INRIA tools stands at 63\% and 57\% respectively where as JNU's performance is only 26.5\% only.
+
+%\begin{figure}[h]
+%	\center
+%	\includegraphics[scale=0.34]{images/merge.png}
+%	\caption{\label{screen}Screenshot of the built QA system showing the orchestration flow for the question - ``problem with transfer order"}
+%\end{figure}
+
+\subsubsection{UoH Corpus}
+We ran the filtered UoH corpus on all the three merging tools. and the results are shown in the following table.
+
+\begin{table}[h]
+	\begin{center}
+		\begin{tabular}{| r | r | }
+			\hline  \bf Merger & \bf No. of Cases Correctly Identified \\
+			\hline
+			JNU & 6517 (35.56 \%) \\ \hline
+			UoH & 12895 (70.36 \%) \\ \hline
+			INRIA & 12611 (68.81 \%)\\ \hline
+			\hline
+		\end{tabular}
+	\end{center}
+	\caption{\label{font-table} Evaluation Results }
+\end{table}
+
+For UoH corpus also UoH performed better than other two merging tools. 
+\subsubsection{\textit{A\d{s}\d{t}\={a}dhy\={a}y\={\i}} Corpus}
+
+\begin{table}[h]
+	\begin{center}
+		\begin{tabular}{|p{1cm} | p{1cm}|p{1.2cm} | p{1.2cm} | p{1.2cm} |}
+			\hline  
+			\bf \# of letters ($\le$) & Sandhis & JNU & UoH & INRIA\\
+			\hline
+			\bf	10	&	93	&	26 (28.0\%)	&	58 (62.4\%)	&	51 (54.8\%)	\\	\hline
+\bf	20	&	571	&	120 (21.0\%)	&	343 (60.1\%)	&	269 (47.1\%)	\\	\hline
+\bf	30	&	1512	&	250 (16.5\%)	&	763 (50.5\%)	&	634 (41.9\%)	\\	\hline
+\bf	40	&	2045	&	315 (15.4\%)	&	988 (48.3\%)	&	803 (39.3\%)	\\	\hline
+\bf	50	&	2302	&	355 (15.4\%)	&	1096 (47.6\%)	&	890 (38.7\%)	\\	\hline
+\bf	All	&	2700	&	411 (15.2\%)	&	1260 (46.7\%)	&	1016 (37.6\%)	\\	\hline
+			\hline
+		\end{tabular}
+	\end{center}
+	\caption{\label{font-table} Evaluation Results }
+\end{table}
+
+Sandhi merging tools also performed better when the characters length is less than or equal to 20. All three merging tools performances started deccaying when we increase the word length.
+\subsubsection{Sandhi type based evaluation}
+We devised our experiment results in to three different types sandhis. JNU merger performed well in case of vowel sandhi examples only. for other two types of sandhis JNU merger did not performed well. All the merging tools performed in case of vowel sandhis but performed poorly inc ase of consonant sandhis. IN all the three types of sandhis UoH merging tool performed better than the other two merging tools.
 \begin{figure}[h]
 	\center
 	\includegraphics[scale=0.34]{images/visargamerge.png}
@@ -610,5 +626,11 @@ For example, none of the three splitters is able to detect this:
 
 \textit{prapa\~{n}ce'v\={a}ntaravibh\={a}gapravibh\={a}gabhinn\={a}nantapad\={a}rthasa\.{n}kule'pi} $\rightarrow$ \textit{prapa\~{n}ce} + \textit{ava} + \textit{antara-vibh\={a}ga-pravibh\={a}ga-bhinna} + \textit{ananta-pada} + \textit{artha-sa\.{n}kule} + \textit{api}
 
+
+\section{Conclusion}
+In this paper we discussed different tools that implement Sanskrit sandhi merging and splitting mechanisms. We create three manually created data set to benchmarking both sandhi merging and splitting tools. Alwo we curated ambiguous existing corpus to get reasonably accurate sandhi example corpus. 
+We also benchmarked the above three tools with our dataset. From our experiments it is evident that in case of Sandhi splitting INRIA performed better where as JNU performed very poorly.  In case of sandhi merging UoH and INRIA performed almost equivalently where UoH performed slightly better than INRIA. JNU again performed poorly in case of merging also. 
+
+In JNU only very limited number of vowel sandhis were implemented. When we see sandhi merging the number of rules that were implemented in all the three tools is almost 50\%. Which opens the door for implementation of other rules which were missing.
 
 \end{document}
