Latest changes related to sandhi2vec

--- a/paper/eacl/eacl2017.bib
+++ b/paper/eacl/eacl2017.bib
@@ -1,4 +1,11 @@
-@Inbook{Kumar2010,
+@article{sachin2007sandhi,
+  title={Sandhi Splitter and Analyzer for Sanskrit (with reference to ac Sandhi)},
+  author={Sachin, Kumar},
+  journal={M. {P}hil. degree at {SCSS, JNU} (submitted, 2007)},
+  year={2007}
+}
+
+@Inbook{Kumar2010a,
 author="Kumar, Anil
 and Mittal, Vipul
 and Kulkarni, Amba",
@@ -9,70 +16,69 @@ year="2010",
 publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
 pages="57--69",
-isbn="978-3-642-17528-2",
-doi="10.1007/978-3-642-17528-2_5",
-url="http://dx.doi.org/10.1007/978-3-642-17528-2_5"
 }
+
+@inproceedings{goyal2013completeness,
+  title={Completeness analysis of a Sanskrit reader},
+  author={Goyal, Pawan and Huet, G{\'e}rard},
+  booktitle={International Symposium on Sanskrit Computational Linguistics},
+  pages={130--171},
+  year={2013}
+}
+
+@online{ss,
+  author = {ILTP-DC},
+  title = {Sandhi-Splitter},
+  year = 2008,
+  url = {\url{http://tdil-dc.in/san/sandhi_splitter/index_dit.html}},
+  urldate = {Accessed: 2016-09-27}
+}
+
 
 @inproceedings{bharati2007,
-	title={Sanskrit and computational linguistics},
-	author={Bharati, Akshar and Kulkarni, Amba},
-	booktitle={First International Sanskrit Computational Symposium. Department of Sanskrit Studies, University of Hyderabad},
-	year={2007}
+    title={Sanskrit and computational linguistics},
+    author={Bharati, Akshar and Kulkarni, Amba},
+    booktitle={First International Sanskrit Computational Symposium. Department of Sanskrit Studies, University of Hyderabad},
+    year={2007}
 }
 
 
-@inproceedings{goyal2013,
-	title={Completeness analysis of a Sanskrit reader},
-	author={Goyal, Pawan and Huet, G{\'e}rard},
-	booktitle={Proceedings, 5th International Symposium on Sanskrit Computational Linguistics. DK Printworld (P) Ltd},
-	pages={130--171},
-	year={2013}
+@inproceedings{huet2003,
+	title={Towards computational processing of Sanskrit},
+	author={Huet, G{\'e}rard},
+	booktitle={International Conference on Natural Language Processing (ICON)},
+	year={2003},
+	organization={Citeseer}
 }
 
-
-@book{Aho:72,
-    author  = {Alfred V. Aho and Jeffrey D. Ullman},
-    title   = {The Theory of Parsing, Translation and Compiling},
-    year    = "1972",
-    volume  = "1",
-    publisher = {Prentice-Hall},
-    address = {Englewood Cliffs, NJ}
+@inproceedings{bharati2006building,
+	title={Building a wide coverage Sanskrit Morphological Analyser: A practical approach},
+	author={Bharati, Akshar and Kulkarni, Amba P and Sheeba, V},
+	booktitle={The First National Symposium on Modelling and Shallow Parsing of Indian Languages, IIT-Bombay},
+	year={2006}
 }
 
-
-@book{APA:83,
-    author  = {{American Psychological Association}},
-    title   = {Publications Manual},
-    year    = "1983",
-   publisher = {American Psychological Association},
-   address = {Washington, DC}
+@Inbook{Gillon2009,
+	author="Gillon, Brendan S.",
+	editor="Kulkarni, Amba
+	and Huet, G{\'e}rard",
+	title="Tagging Classical Sanskrit Compounds",
+	bookTitle="Sanskrit Computational Linguistics: Third International Symposium, Hyderabad, India, January 15-17, 2009. Proceedings",
+	year="2009",
+	publisher="Springer Berlin Heidelberg",
+	address="Berlin, Heidelberg",
+	pages="98--105",
+	isbn="978-3-540-93885-9",
+	doi="10.1007/978-3-540-93885-9_8",
+	url="http://dx.doi.org/10.1007/978-3-540-93885-9_8"
 }
 
-@incollection{ACM:83,
-	author = {Association for Computing Machinery},
-	year = "1983",
-	booktitle = {Computing Reviews},
-	volume = "24",
-	number = "11",
-	pages = "503--512"
-}
-
-@article{Chandra:81,
-	author = {Ashok K. Chandra and Dexter C. Kozen and Larry J. Stockmeyer},
-	year = "1981",
-	title = {Alternation},
-	journal = {Journal of the Association for Computing Machinery},
-	volume = "28",
-	number = "1",
-	pages = "114--133"
-}
-
-
-@book{Gusfield:97,
-    author  = {Dan Gusfield},
-    title   = {Algorithms on Strings, Trees and Sequences},
-    year    = "1997",
-    publisher = {Cambridge University Press},
-    address = {Cambridge, UK}
+@article{kulkarni2009sanskrit,
+	title={Sanskrit morphological analyser: Some issues},
+	author={Kulkarni, Amba and Shukl, Devanand},
+	journal={Indian Linguistics},
+	volume={70},
+	number={1-4},
+	pages={169--177},
+	year={2009}
 }
